Correct spacing issue

--- a/assets/dashboard.css
+++ b/assets/dashboard.css
@@ -236,7 +236,7 @@ main.dashboard>section:last-child {
   background: url("./icons/left-arrow.svg") center no-repeat;
   background-size: 100%;
   position: absolute;
-  top: 105px;
+  top: 115px;
   left: 18px;
   height: 14px;
   width: 16px;
